force-app/main/default/objects/Detection_Rule__c/Detection_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines individual detection rules within a behavior detection configuration, specifying thresholds, operators, and severity for identifying sales behavior patterns.</description>
    <label>Detection Rule</label>
    <nameField>
        <label>Detection Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detection Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>