force-app/main/default/objects/Detection_Rule__c/fields/Behavior_Detection_Config__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Detection_Config__c</fullName>
    <description>The parent behavior detection configuration this rule belongs to.</description>
    <label>Behavior Detection Config</label>
    <type>MasterDetail</type>
    <referenceTo>Behavior_Detection_Config__c</referenceTo>
    <relationshipLabel>Detection Rules</relationshipLabel>
    <relationshipName>Detection_Rules</relationshipName>
</CustomField>