force-app/main/default/objects/Detection_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what this detection rule evaluates.</description>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>