force-app/main/default/objects/Detection_Rule__c/fields/Detection_Type__c.field-meta.xml
<CustomField>
    <fullName>Detection_Type__c</fullName>
    <description>The type of behavior this rule detects.</description>
    <label>Detection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbagging</fullName>
            </value>
            <value>
                <fullName>Optimism_Bias</fullName>
            </value>
            <value>
                <fullName>Timing_Concentration</fullName>
            </value>
            <value>
                <fullName>Period_Slip_Loop</fullName>
            </value>
            <value>
                <fullName>Threshold_Approach</fullName>
            </value>
            <value>
                <fullName>Category_Regression</fullName>
            </value>
            <value>
                <fullName>Coverage_Gap</fullName>
            </value>
            <value>
                <fullName>Staleness</fullName>
            </value>
            <value>
                <fullName>Deal_Push_Pattern</fullName>
            </value>
            <value>
                <fullName>Forecast_Accuracy_Rep</fullName>
            </value>
            <value>
                <fullName>Product_Strength</fullName>
            </value>
            <value>
                <fullName>Product_Weakness</fullName>
            </value>
            <value>
                <fullName>Deal_Velocity</fullName>
            </value>
            <value>
                <fullName>Win_Rate_By_Size</fullName>
            </value>
            <value>
                <fullName>Stage_Stall</fullName>
            </value>
            <value>
                <fullName>Quarter_End_Compression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>