force-app/main/default/objects/Detection_Rule__c/fields/Is_Library__c.field-meta.xml
<CustomField>
    <fullName>Is_Library__c</fullName>
    <description>Indicates whether this rule is a library template available for reuse.</description>
    <label>Is Library</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>