force-app/main/default/objects/Detection_Rule__c/fields/Lookback_Periods__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Periods__c</fullName>
    <description>Number of periods to look back for pattern detection.</description>
    <label>Lookback Periods</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>