force-app/main/default/objects/Detection_Rule__c/fields/Threshold_1_Field__c.field-meta.xml
<CustomField>
    <fullName>Threshold_1_Field__c</fullName>
    <description>API name of the first field used in threshold evaluation.</description>
    <label>Threshold 1 Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>