force-app/main/default/objects/Detection_Rule__c/fields/Threshold_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_1_Value__c</fullName>
    <description>Value for the first threshold comparison.</description>
    <label>Threshold 1 Value</label>
    <type>Text</type>
    <length>50</length>
</CustomField>