force-app/main/default/objects/Detection_Rule__c/fields/Threshold_2_Operator__c.field-meta.xml
<CustomField>
    <fullName>Threshold_2_Operator__c</fullName>
    <description>Comparison operator for the second threshold.</description>
    <label>Threshold 2 Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater_Than</fullName>
            </value>
            <value>
                <fullName>Less_Than</fullName>
            </value>
            <value>
                <fullName>Between</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>