force-app/main/default/objects/Detection_Rule__c/fields/Threshold_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_2_Value__c</fullName>
    <description>Value for the second threshold comparison.</description>
    <label>Threshold 2 Value</label>
    <type>Text</type>
    <length>50</length>
</CustomField>